--- a/data/mission-list.yaml
+++ b/data/mission-list.yaml
@@ -15,7 +15,7 @@ ad_block:
     url: ''
 
 mission:
-  title: 觀看兩則廣告可得 Hami point 1點
+  title: 觀看1則廣告可得Hami point 0.2點 or 每觀看一篇文章得0.1點
   step: |
     點擊前往活動，輸入驗證碼進入活動
     等待5秒後點擊廣告頁面
