--- a/data/index.yaml
+++ b/data/index.yaml
@@ -53,19 +53,21 @@ mission_list:
       點擊網頁中的返回上頁按鈕回到活動
       等待5秒後點擊廣告頁面
 
-  - ad: 1
-
-  - title: 無剩餘名額淡化+不可點擊-下載APP，註冊會員
+  - title: 有任務列表-下載APP，註冊會員
     src: ../images/figure03.jpg
     desc: 下載APP並註冊會員後即可賺取點數
     url: mission-list.html
     show_quota: 0
-    quota: 0
+    quota: 3
     step: |
-      點擊網頁中的返回上頁按鈕回到活動
-      等待5秒後點擊廣告頁面
+      透過連結下載____APP
+      開啟____APP並註冊會員
+      等待審核
+      審核通過發放點數
 
-  - title: 觀看1則廣告可得Hami point 0.2點
+  - ad: 1
+
+  - title: 無剩餘名額淡化+不可點擊-觀看1則廣告可得Hami point 0.2點
     src: ../images/figure04.jpg
     desc: 每天上午6點更新任務名額，並於其他時段不定時增加名額。
     url: mission-list.html
